# gaussian_process

./: pyproject.toml  requirements.txt
continuum/: core.py  deep_gauss.py  existing_tutorial.py  gauss_test.py  hidden.py  replay.py
continuum.egg-info/: PKG-INFO  SOURCES.txt
continuum/data/loaders/: elevators.py
continuum/loaders/: __init__.py  elevators.py
continuum/models/gauss/deep/: README.md  __init__.py  base.py  hidden.py
continuum/models/gauss/default/: approx.py
continuum/models/gauss/multi/: lists.py
continuum/trainers/online/: windowing.py
notebooks/: gaussian_process_regression.ipynb  test.ipynb
scripts/: run_streaming_stock.py
tests/: test_continuum.py  test_tan.py
