[tool.poetry]
name = "continuum"
version = "0.1.0"
description = ""
authors = ["karamel <kivo360@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torchvision = "^0.6.0"
gym = "^0.17.2"
matplotlib = "^3.2.1"
gpytorch = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
